# sbe-schema

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  pre-push.sh
.github/workflows/: main.yml
sbe/: Cargo.toml
sbe-schema/: Cargo.toml
sbe-schema-cli/: Cargo.toml
sbe-schema-cli/src/: main.rs  term.rs
sbe-schema-cli/src/evolution/: compatibility.rs  mod.rs
sbe-schema-cli/src/sbe_tool/: generate.rs  mod.rs  repo.rs  validate.rs
sbe-schema/src/: lib.rs  schema.rs  types.rs
sbe-schema/src/evolution/: backward.rs  forward.rs  full.rs  mod.rs  optional_impl_for_types.rs  partial_compatibility_for_types.rs  validator.rs
sbe/src/: main.rs  term.rs
sbe/src/evolution/: compatibility.rs
sbe/src/sbe_tool/: generate.rs  mod.rs  repo.rs
sbe/src/schema/: generate.rs  mod.rs  validate.rs
sbe/src/schema/evolution/: compatibility.rs  mod.rs
sbe/src/tool/: mod.rs  repo.rs
