[workspace]
members = [
  "sbe-schema-cli",
  "sbe-schema",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3"
semver = { version = "1.0.23", features = ["serde"], git = "https://github.com/rafalpiotrowski/semver.git" , branch = "allow_missing_minor_patch"}

[profile.release]
debug = true
strip = false

[workspace.lints.rust]
missing_docs = "deny"
unused_crate_dependencies = "warn"