[workspace]
members = ["sbe", "sbe-schema"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
quick-xml = { version = "0.34", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.7"
semver = { version = "1.0.23", features = [
  "serde",
], git = "https://github.com/rafalpiotrowski/semver.git", branch = "allow_missing_minor_patch" }
termcolor = "1.4"
exitcode = "1.1"
git2 = "0.19"

[profile.release]
debug = true
strip = false

[workspace.lints.rust]
missing_docs = "deny"
unused_crate_dependencies = "warn"
