[package]
name = "sbe-schema-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
termcolor = { workspace = true }
exitcode = { workspace = true }

[lints]
workspace = true
