[package]
name = "sbe-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
semver = { workspace = true }
serde_with = { workspace = true }

[dev-dependencies]
quick-xml = { workspace = true }

[lints]
workspace = true
