[package]
name = "sbe-schema"
version = "0.1.0"
edition = "2021"
authors = [
    "Rafal Piotrowski",
]
license = "Apache-2.0 OR MIT"
description = "sbe schema library"
readme = "../README.md"
repository = "https://github.com/rafalpiotrowski/sbe-schema"
keywords = [ "sbe", "simple-binary-encoding", "aeron", "encoding", "serialization" ]
categories = [ "development-lib", "code-generation", "lib", "library" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
semver = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
