[package]
name = "sbe"
version = "0.1.0"
edition = "2021"
authors = [
    "Rafal Piotrowski",
]
license = "Apache-2.0 OR MIT"
description = "sbe schema tool to facilitate working with SBE schema files and generating codes"
readme = "../README.md"
repository = "https://github.com/rafalpiotrowski/sbe-schema"
keywords = [ "sbe", "simple-binary", "encoding", "sbe-schema", "aeron" ]
categories = [ "command-line-utilities", "development-tools", "development-tools::build-utils" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
termcolor = { workspace = true }
exitcode = { workspace = true }
git2 = { workspace = true }
sbe-schema = { version = "0.1.0", path = "../sbe-schema" }

[lints]
workspace = true
